3.6.1  (2017-10-27)
	- server.config.js 配置的路径(webRoot、viewRoot、mockTpl、mockApi)支持相对路径

3.6.0  (2017-10-12)
	- 支持nei server --all 指令，合并多个工程router提供mock服务
	- 修复bug， 重复监听文件修改
	- 使用cors库支持自动跨域，不再需要配置跨域头了

3.5.9  (2017-8-28)
    - 修复bug: proxy的changeOriginHost需要改为true，这样才能改写http 请求头里的header

3.5.8  (2017-8-24)
    - 修复bug: modelServer 中的 path 应该是页面的 path

3.5.7  (2017-8-8)
    - 修复bug:修复接口代理到其他http地址时出现的handle.data为underfined的bug

3.5.6  (2017-8-7)
    - 新功能: mock response类型为文件, 返回一张图片
    - 修复response选为object时，构建工具解析为字符串的bug
    - 修复apiResHeader的bug

3.5.5  (2017-6-21)
    - 修复直接使用Array<Object>构建失败的情况

3.5.4  (2017-6-19)
    - 修复Object.values的兼容性bug

3.5.3  (2017-6-2)
    - 给输出日志信息加上颜色
    - 新增命令--ids, --tags,可以根据接口id和标签筛选指定接口以及相应涉及的数据模型
    - 新增命令--add, 配合上面的功能做到持续接口开发
    - nei update时，对routes中修改为"http"开头的记录，update之后仍然保存修改内容

3.5.2  (2017-6-1)
    - 注入给页面的模型数据，可以从指定的服务器获取 - bugfix

3.5.1  (2017-6-1)
    - livereload 中的 chokidar 修改 ignored 传入空字符串的问题
    - 注入给页面的模型数据，可以从指定的服务器获取

3.5.0  (2017-5-27)
    - mcss 文件编译支持自定义配置选项 - bugfix

3.4.9  (2017-5-27)
    - mcss 文件编译支持自定义配置选项

3.4.8  (2017-5-26)
    - 非mcss和css文件变化时不会刷新浏览器的bug修复

3.4.7  (2017-5-26)
    - 监听 mcss 文件，自动编译生成 css 文件

3.4.6  (2017-4-27)
    - 页面访问地址支持输出模板预渲染数据:如果页面访问地址带参数resfmt，且值为json，则请求返回模板预填数据，content-type为application/json

3.4.5  (2017-4-21)
    - 修正bug(issue#46, 删除文件后更新未生成某些文件 )

3.4.4  (2017-4-17)
    - nei.no.parse.js 没有开启严格模式导致低版本node异常

3.4.3  (2017-4-14)
    - nei server 可以打开的自定义地址支持相对路径

3.4.2  (2017-4-13)
    - nei server 增加监听静态目录和模板目录的配置
    - nei server 可以打开自定义地址

3.4.1  (2017-3-20)
    - 增加了 neinoparse 配置文件，实现 glob 模式匹配文件使之不解析的功能

3.4.0  (2017-03-01)
    - 移除无用的qrcode代码
    - 增加config文件搜索深度限制
    - 文件上传流模拟

3.3.9   (2017-02-08)
    - 当用户修改了data.js文件后，update命令不再更新该文件
    - sh文件赋予777权限

3.3.8   (2017-02-07)
    - 在iosAssemble启用情况下，生成的mock静态文件和接口名一致

3.3.7   (2017-02-06)
    - 添加静态mock文件到pbx文件，修复pbx文件更新bug
    - 修复ignore功能的支持bug

3.3.6	(2017-01-24)
	- 紧急修复, host地址错误

3.3.5	(2017-01-23)