@@ -124,6 +124,10 @@ nei update [参数]
 | -a | --all | false | 是否更新指定目录下面的所有项目，前提是没有指定的 key |
 | -w | --overwrite | false | 是否覆盖已存在的文件，需要下载的文件不在此列，如果需要重新下载，请先将本地的文件删除 |
 | 无 | --spec | false | 是否更新规范中的普通文件和文件夹，以数据填充的文件不在此列 |
+| -r | --reload |  | 是否监听静态文件和模板文件的变化并自动刷新浏览器,默认是监听的. |
+| -l | --launch |  | 是否自动打开浏览器,默认是启动的. |
+| -p | --port |  | 端口,默认为8002 |
+
 
 使用范例：
 
@@ -150,6 +154,13 @@ nei server [参数]
 | -h | --help | | 显示 server 命令帮助信息 |
 | -o | --output | ./ | 已构建项目的输出路径 |
 | -k | --key |  | 需要启动的项目的唯一标识 |
+| -r | --reload |  | 是否监听静态文件和模板文件的变化并自动刷新浏览器,默认是监听的. |
+| -l | --launch |  | 是否自动打开浏览器,默认是启动的. |
+| -p | --port |  | 端口,默认为8002 |
+| -pm | --proxy-model |  | 是否启用远程代理模型数据,默认打开 |
+| -pr | --proxy-routes |  | 是否启用远程代理异步接口数据,默认打开 |
+| -ua | --user-agent |  | 客户端标识,默认为值pc,此外还可以取值为mobile. |
+
 
 使用范例
 
