@@ -79,19 +79,19 @@ module.exports = {
       "j": "r",
       "q": "reload",
       "d": true,
-      "m": "是否监听静态文件和模板文件的变化并自动刷新浏览器"
+      "m": "是否监听静态文件和模板文件的变化并自动刷新浏览器,默认是监听的."
     },
     {
       "j": "l",
       "q": "launch",
       "d": true,
-      "m": "是否自动打开浏览器"
+      "m": "是否自动打开浏览器,默认是启动的."
     },
     {
       "j": "p",
       "q": "port",
       "d": 8002,
-      "m": "是否自动打开浏览器"
+      "m": "端口,默认为8002"
     },
     {
       "q": "specType",
@@ -237,6 +237,42 @@ module.exports = {
       "q": "key",
       "d": "",
       "m": "需要启动的项目的唯一标识"
+    },
+    {
+      "j": "r",
+      "q": "reload",
+      "d": true,
+      "m": "是否监听静态文件和模板文件的变化并自动刷新浏览器,默认是监听的."
+    },
+    {
+      "j": "l",
+      "q": "launch",
+      "d": true,
+      "m": "是否自动打开浏览器,默认是启动的."
+    },
+    {
+      "j": "p",
+      "q": "port",
+      "d": 8002,
+      "m": "端口,默认为8002"
+    },
+    {
+      "j": "pm",
+      "q": "proxy-model",
+      "d": true,
+      "m": "是否启用远程代理模型数据,默认打开"
+    },
+    {
+      "j": "pr",
+      "q": "proxy-routes",
+      "d": true,
+      "m": "是否启用远程代理异步接口数据,默认打开"
+    },
+    {
+      "j": "ua",
+      "q": "user-agent",
+      "d": "p",
+      "m": "客户端标识,默认为值pc,此外还可以取值为mobile."
     },
     {
       "q": "all",
