@@ -683,16 +683,6 @@ class Builder extends EventEmitter {
         }
         rules.push(rule);
       })
-
-      Object.keys(neiServerConfig.proxyRoutes).forEach(k=>{
-        let m = k.split(/\s+/);
-        var rule = {
-          method: m[0],
-          path: m[1],
-          value: neiServerConfig.proxyRoutes[k]
-        };
-        rules.unshift(rule);
-      })
     }
     // jar 包存放目录以及暴露给模板的实例名和类名的映射关系
     if (this.config.jarRoot || this.spec.jarConfig.length > 0) {
