@@ -44,7 +44,12 @@ Server.prototype = {
       port: 8000,
       https: false,  // 默认关闭https
       app: app,
-      injector: []
+      injector: [],
+      reload: true,
+      launch: true,
+      'proxy-model' : true,
+      'proxy-routes' : true,
+      'user-agent': 'pc'
     });
 
     let server;
@@ -97,6 +102,15 @@ Server.prototype = {
       app.use(livereload(options))
     }
 
+    // 用户自定义配置的代理路由，注意此处触发的位置
+    if(options['proxy-routes']){
+      app.use(rewrite({
+        rules: options.proxyRoutes,
+        dir: options.dir,
+        changeOrigin: options.changeOrigin
+      }));
+    }
+    
     // 重写路由，生成路由代理
     if (options.rules) {
       app.use(rewrite(options));
