@@ -199,7 +199,7 @@ function wrapPage(index, list) {
         res.render(conf.p + VIEW_EXT, json);
       }
     }
-    if (ROOT.MODEL_SERVER) {
+    if (ROOT.MODEL_SERVER && ROOT.PROXY_MODEL) {
       getModelFromServer(req.originalUrl, function (json) {
         render(json);
       }, req);
@@ -228,6 +228,7 @@ module.exports = {
     ROOT.API_RES_HEADERS = obj.apiResHeaders;
     ROOT.MODEL_SERVER = obj.modelServer;
     VIEW_EXT = obj.viewExt;
+    ROOT.PROXY_MODEL = obj.proxyModel;
   },
   // 获取包装过的路由
   getRoutes: function (routes) {
