@@ -40,11 +40,17 @@ function watchConfigForNei(configFilePaths, server, targetDir) {
 
 // 包装nei配置文件
 function wrapOptionsForNei(config, targetDir) {
-  if(config.hasOwnProperty('changeOrigin') && !config.changeOrigin){// 之前的配置没有changeOrigin,向下兼容
+  if (config.hasOwnProperty('changeOrigin') && !config.changeOrigin) { // 之前的配置没有changeOrigin,向下兼容
     config.changeOrigin = false;
-  }else {
+  } else {
     config.changeOrigin = true;
   }
+
+  let ua = config['user-agent'] === undefined ? 'pc' : config['user-agent'];
+  if (!!config.modelServer && ua.toUpperCase() === 'MOBILE') {
+    config.modelServer.headers['User-Agent'] = "Mozilla/5.0 (Linux; Android 4.4.4; HTC D820u Build/KTU84P) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/40.0.2214.89 Mobile Safari/537.36"
+  }
+
   nei.setting({
     projectKey: config.projectKey,
     online: config.online,
@@ -57,7 +63,8 @@ function wrapOptionsForNei(config, targetDir) {
     changeOrigin: config.changeOrigin,
     fmpp: config.fmpp || {},
     apiResHeaders: config.apiResHeaders || {},
-    modelServer: config.modelServer
+    modelServer: config.modelServer,
+    proxyModel: config['proxy-model'] === undefined ? false : config['proxy-model']
   });
   config.routes = nei.getRoutes(config.routes);
 
@@ -75,7 +82,8 @@ function wrapOptionsForNei(config, targetDir) {
     ext: config.viewExt || '.ftl',
     changeOrigin: config.changeOrigin,
     nei: true,
-    https: config.https
+    https: config.https,
+    proxyRoutes: config.proxyRoutes
   };
 }
 
@@ -86,11 +94,19 @@ module.exports = function (config) {
     // nei项目的接入
     serverConfig = options.configFilePath;
     if ((typeof serverConfig === "string") && (serverConfig.constructor === String)) {
-      options = wrapOptionsForNei(require(serverConfig), config.targetDir);
+      let sconfig = require(serverConfig);
+      sconfig['proxy-model'] = config.args['proxy-model'];
+      sconfig['user-agent'] = config.args['user-agent'];
+      options = wrapOptionsForNei(sconfig, config.targetDir);
     } else {
+      serverConfig['proxy-model'] = config.args['proxy-model'];
       options = wrapOptionsForNei(serverConfig, config.targetDir);
     }
   }
+
+  // server命令参数合并
+  Object.assign(options, config.args);
+
   let server = new Server(options);
   server.start();
   if (config.watchConfigPaths) {
